# force3-with-bot

./: .gitignore  CMakeLists.txt  IA41-force3-with-bot.pro  IA41-force3-with-bot.pro.shared  README.md  qtcreator-code-style.xml
doc/beamer/: main.tex
doc/report/: main.tex
doc/report/src_samples/: heuristic_hard.cpp  heuristic_normal.cpp  negamax.cpp  think.cpp
doc/report/tex/: analyse-probleme.tex  annexes.tex  conclusion.tex  features-logiciel.tex  intelligence-artificielle.tex  introduction.tex  methodes-resultats.tex  preamble.tex  regles-force3.tex  representation-etat.tex  structures-donnees.tex
src/: ai.cpp  ai.hpp  alphabeta.cpp  alphabeta.hpp  boardsquare.hpp  boardstate.cpp  boardstate.hpp  force3.cpp  force3.hpp  gameboard.cpp  gameboard.hpp  gameboardstate.cpp  gameboardstate.hpp  gamesquare.cpp  gamesquare.hpp  gamestate.cpp  gamestate.hpp  heuristic.cpp  heuristic.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  messagehandler.cpp  messagehandler.hpp  move.hpp  settingsmenu.cpp  settingsmenu.hpp  tree.hpp
src/common/: move.hpp  movewrapper.hpp
src/logic/: ai.cpp  ai.hpp  boardsquare.hpp  boardstate.cpp  boardstate.hpp  gamestate.cpp  gamestate.hpp  heuristic.cpp  heuristic.hpp  move.hpp  movewrapper.hpp
src/ui/: force3.cpp  force3.hpp  gameboard.cpp  gameboard.hpp  gamesquare.cpp  gamesquare.hpp  mainmenu.cpp  settingsmenu.cpp
ui/: force3.ui  gameboard.ui  mainmenu.ui  settingsmenu.ui
